<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>i4driving</groupId>
  <artifactId>i4driving-ots</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  
  <properties>
    <jdk.version>17</jdk.version>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <ots.version>1.7.5</ots.version>
  </properties>
  
  <!-- The build plugins generate java classes from the OpenDrive schema files, and add @SuppressWarnings("all"). -->
  <build>
    <plugins>
      <plugin>
        <groupId>org.jvnet.jaxb2.maven2</groupId>
        <artifactId>maven-jaxb2-plugin</artifactId>
        <version>0.15.3</version>
        <executions>
          <execution>
            <goals>
              <goal>generate</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <schemaDirectory>src/main/resources/opendrive/xsd</schemaDirectory>
          <generateDirectory>src/main/java</generateDirectory>
          <generatePackage>org.opentrafficsim.i4driving.opendrive.generated</generatePackage>
          <!-- markGenerated=false, noFileHeader=true, episode=false; make sure there are no dates in generated files -->
          <markGenerated>false</markGenerated>
          <noFileHeader>true</noFileHeader>
          <episode>false</episode>
          <cleanPackageDirectories>true</cleanPackageDirectories>
          <scanDependenciesForBindings>false</scanDependenciesForBindings>
          <strict>false</strict>
          <specVersion>2.3</specVersion>
          <verbose>true</verbose>
          <extension>true</extension>
          <bindingDirectory>src/main/resources/opendrive/xsd</bindingDirectory>
          <bindingIncludes>
            <bindingInclude>opendrive-bindings.xml</bindingInclude>
          </bindingIncludes>
          <schemaIncludes>
            <schemaInclude>*.xsd</schemaInclude>
          </schemaIncludes>
        </configuration>
      </plugin>
      <plugin>
        <groupId>com.google.code.maven-replacer-plugin</groupId>
        <artifactId>replacer</artifactId>
        <version>1.5.3</version>
        <executions>
          <execution>
            <phase>process-sources</phase>
            <goals>
              <goal>replace</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <includes>
            <include>${project.basedir}/src/main/java/org/opentrafficsim/i4driving/opendrive/generated/*.java</include>
          </includes>
          <regex>true</regex>
          <regexFlags>
            <regexFlag>MULTILINE</regexFlag>
          </regexFlags>
          <replacements>
            <replacement>
              <token>^public( abstract)? class </token>
              <value>@SuppressWarnings("all") public$1 class </value>
            </replacement>
            <replacement>
              <token>^public enum </token>
              <value>@SuppressWarnings("all") public enum </value>
            </replacement>
            <!-- Also remove tab in documentation of TRoadObjectsObject -->
            <replacement>
              <token>\t</token>
              <value></value>
            </replacement>
          </replacements>
        </configuration>
      </plugin>
    </plugins>
  </build>
  
  <dependencies>
  	<dependency>
      <groupId>org.opentrafficsim</groupId>
      <artifactId>ots-road</artifactId>
      <version>${ots.version}</version>
  	</dependency>
  	
  	<dependency>
      <groupId>org.opentrafficsim</groupId>
      <artifactId>ots-swing</artifactId>
      <version>${ots.version}</version>
    </dependency>
    
    <dependency>
      <groupId>org.opentrafficsim</groupId>
      <artifactId>ots-parser-xml</artifactId>
      <version>${ots.version}</version>
    </dependency>
    
    <dependency>
      <groupId>org.opentrafficsim</groupId>
      <artifactId>ots-sim0mq</artifactId>
      <version>${ots.version}</version>
    </dependency>
    
  	<dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.2</version>
      <scope>test</scope>
    </dependency>
    
    <dependency>
      <groupId>gov.nist.math</groupId>
      <artifactId>jama</artifactId>
      <version>1.0.3</version>
    </dependency>
    
    <!-- jaxb and javax.annotation are used to parse XML in line with the OpenDrive schema -->
    
    <dependency>
      <groupId>org.glassfish.jaxb</groupId>
      <artifactId>jaxb-runtime</artifactId>
      <version>2.3.1</version>
    </dependency>
    
    <dependency>
      <groupId>javax.annotation</groupId>
      <artifactId>javax.annotation-api</artifactId>
      <version>1.3.2</version>
    </dependency>
  </dependencies>
</project>